# rm_auto_aim_mvp

./: .gitignore  CMakeLists.txt  README.md
include/auto_aim/: coord_transform.hpp  detector.hpp  pnp_solver.hpp  types.hpp
src/: coord_transform.cpp  detector.cpp  main.cpp  pnp_solver.cpp
